Resolves: tdf#122016 crash accessing deleted GtkSalMenu

Change-Id: Ib6527e17110b55251fea9f0701d0e02f6fa5a9fe
Reviewed-on: https://gerrit.libreoffice.org/65107
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>